--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,11 +1,12 @@
 @keyframes start {
     0% {
-        opacity: 0;
-        transform: translateY(-100px);
+        opacity: 0; 
+        transform: translateY(-100px) scale(.1);     
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        text-shadow: 5px -1px;
+        transform: translateY(0px) scale(1);
     }
 }
 
@@ -80,8 +81,8 @@
         left: 125%;
     }
 }
-@keyframes shine {
-    100% {
-        left: 125%;
+    @keyframes shine {
+        100% {
+            left: 125%;
+        }
     }
-}
