--- a/sass/main.css
+++ b/sass/main.css
@@ -670,6 +670,12 @@ footer {
   opacity: .7;
 }
 
+canvas {
+  width: 100vw;
+  height: 106vh;
+  position: absolute;
+}
+
 main {
   background: inherit;
 }
