--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -38,8 +38,7 @@
     position: fixed;
     height: 70px;
     width: 100%;
-    background-color: #333;
-    border-bottom: 1px solid;
+    background-color: rgba(255, 255, 255, 0.2);
     z-index: 1;
 
     &-logo {
