--- a/sass/main.css
+++ b/sass/main.css
@@ -560,8 +560,7 @@ footer {
   position: fixed;
   height: 70px;
   width: 100%;
-  background-color: #333;
-  border-bottom: 1px solid;
+  background-color: rgba(255, 255, 255, 0.2);
   z-index: 1;
 }
 
