Dodanie treści do footer'a

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,18 +3,21 @@ footer {
 }
 
 #site-footer {
-	padding: 25px 0;
-	font-size: 85%;
-	background-color: #2A2A2A;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
 	position: fixed;
 	z-index: -1;
 	left: 0;
 	right: 0;
 	bottom: 0;
-}
-
-#site-footer {
+	padding: 25px 0;
+	background-color: #2A2A2A;
 	min-height: 20vw;
 	background-size: cover;
 	background-position: center;
+}
+
+.copyright span {
+	font-size: 20px;
 }
