--- a/sass/main.css
+++ b/sass/main.css
@@ -459,20 +459,29 @@ footer {
 }
 
 #site-footer {
-  padding: 25px 0;
-  font-size: 85%;
-  background-color: #2A2A2A;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   position: fixed;
   z-index: -1;
   left: 0;
   right: 0;
   bottom: 0;
-}
-
-#site-footer {
+  padding: 25px 0;
+  background-color: #2A2A2A;
   min-height: 20vw;
   background-size: cover;
   background-position: center;
+}
+
+.copyright span {
+  font-size: 20px;
 }
 
 .row {
@@ -694,7 +703,7 @@ footer {
 }
 
 canvas {
-  width: 100vw;
+  width: 100%;
   height: 106vh;
   position: absolute;
 }
