--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,6 +10,21 @@
 //     // background-position: top;
 
 // }
+.heading-primary {
+
+    &--main {
+        font-size: 50px;
+        text-transform: uppercase bold;
+        letter-spacing: 2px;
+    }
+
+    &--sub {
+        font-size: 30px;
+        text-transform: lowercase;
+        letter-spacing: 3px;
+    }
+}
+
 .parallax-window {
     min-height: 100vh;
     background-image: linear-gradient(to right, rgba(black, 0.7));
