--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,7 +24,7 @@
             padding: 0 10px;
             text-decoration: none;
             text-transform: uppercase;
-            color: white;
+            color: red;
             // border-bottom: 1px solid $color-primary;
             
             @include screen('mobile') {
