--- a/sass/main.css
+++ b/sass/main.css
@@ -178,7 +178,7 @@ body {
   padding: 0 10px;
   text-decoration: none;
   text-transform: uppercase;
-  color: white;
+  color: red;
 }
 
 @media only screen and (min-width: 460px) {
