Revert "change header color"
This reverts commit 3babd32e46e213076dd7a2a961dc91676705731b.

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,7 +24,7 @@
             padding: 0 10px;
             text-decoration: none;
             text-transform: uppercase;
-            color: red;
+            color: white;
             // border-bottom: 1px solid $color-primary;
             
             @include screen('mobile') {
