--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -48,10 +48,11 @@ main {
             position: absolute;
             bottom: 110px;
             opacity: .5;
+            animation: mouse-icon 4s ease-in;
 
-            &:hover {
-                opacity: 1;
-            }
+            // &:hover {
+            //     opacity: 1;
+            // }
 
             svg:hover {
 
@@ -111,7 +112,8 @@ main {
         margin-top: 50px;
 
         &-flex {
-            display: inline-flex;
+            display: flex;
+            flex-wrap: wrap;
 
             &--box {
                 margin: 20px;   
