--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -23,19 +23,19 @@
 
 @keyframes arrow-down {
     0% {
-        transform: scale(1);
+        transform: translateY(-5px);
     }
     25% {
-        transform: scale(1.1);
+        transform: translateY(5px);
     }
     50% {
-        transform: scale(1);
+        transform: translateY(-5px);
     }
     75% {
-        transform: scale(.9);
+        transform: translateY(5px);
     }
     100% {
-        transform: scale(1);
+        transform: translateY(-5px);
     }
 }
 
@@ -86,3 +86,14 @@
             left: 125%;
         }
     }
+
+@keyframes mouse-icon {
+    0% {
+        opacity: 0;
+        transform: translateY(-5vh);
+    }
+    100% {
+        opacity: 0.5;
+        transform: translate(0);
+    }
+}
