--- a/sass/main.css
+++ b/sass/main.css
@@ -54,47 +54,47 @@
 
 @-webkit-keyframes arrow-down {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
   25% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   50% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
   75% {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
 }
 
 @keyframes arrow-down {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
   25% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   50% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
   75% {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
 }
 
@@ -334,6 +334,32 @@
   }
 }
 
+@-webkit-keyframes mouse-icon {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-5vh);
+            transform: translateY(-5vh);
+  }
+  100% {
+    opacity: 0.5;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@keyframes mouse-icon {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-5vh);
+            transform: translateY(-5vh);
+  }
+  100% {
+    opacity: 0.5;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -425,8 +451,8 @@ body {
 .btn-about {
   position: absolute;
   bottom: 10vh;
-  -webkit-animation: arrow-down-show 6s ease-out;
-          animation: arrow-down-show 6s ease-out;
+  -webkit-animation: arrow-down-show 4s ease-out;
+          animation: arrow-down-show 4s ease-out;
 }
 
 .btn-about .arrow-animated {
@@ -445,8 +471,9 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   opacity: .5;
-  -webkit-animation: arrow-down 2s 2s ease-in-out infinite;
-          animation: arrow-down 2s 2s ease-in-out infinite;
+  top: -5px;
+  -webkit-animation: arrow-down 2s 3s ease-in-out infinite;
+          animation: arrow-down 2s 3s ease-in-out infinite;
 }
 
 .btn-about .arrow-animated:hover {
@@ -551,7 +578,7 @@ footer {
   left: 0;
   right: 100%;
   bottom: 0;
-  background: #ea9554;
+  background: #ccc;
   height: 4px;
   -webkit-transition-property: right;
   transition-property: right;
@@ -573,7 +600,6 @@ footer {
   position: fixed;
   height: 70px;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.2);
   z-index: 1;
 }
 
@@ -620,7 +646,7 @@ footer {
 
 .navbar-items a {
   text-decoration: none;
-  color: white;
+  color: #ea9554;
   font-size: 20px;
 }
 
@@ -766,10 +792,8 @@ main {
   position: absolute;
   bottom: 110px;
   opacity: .5;
-}
-
-.section-start .mouse-icon:hover {
-  opacity: 1;
+  -webkit-animation: mouse-icon 4s ease-in;
+          animation: mouse-icon 4s ease-in;
 }
 
 .section-start .mouse-icon svg:hover path {
@@ -828,9 +852,11 @@ main {
 }
 
 .section-certyfikaty-flex {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .section-certyfikaty-flex--box {
