--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -97,3 +97,45 @@
         transform: translate(0);
     }
 }
+
+@keyframes line-cv-animation{
+
+    0%{
+      width: 0;
+      opacity: 1;
+    }
+  
+    99%{
+      width: 100%;
+      opacity: 1;
+    }
+  
+    100%{
+      width: 100%;
+      opacity: 0;
+    }  
+  }
+  
+  @keyframes open-cv-animation{
+  
+    0%{
+      height: 0;
+      top: 50%;
+    }
+  
+    100%{
+      height: 100vh;
+      top: 0;
+    }
+  }
+
+  @keyframes fade{
+
+    0%{
+      opacity: 0;
+    }
+  
+    100%{
+      opacity: 1;
+    }
+  }
