Add image and button to section CV

--- a/sass/main.css
+++ b/sass/main.css
@@ -844,6 +844,84 @@ main {
   display: block;
 }
 
+.honeycomb {
+  margin: 50px auto;
+  text-align: center;
+}
+
+.hexagon {
+  position: relative;
+  display: inline-block;
+  margin: 1px 18px;
+  background-color: lightgray;
+  text-align: center;
+  color: gray;
+}
+
+.hexagon, .hexagon::before, .hexagon::after {
+  width: 67px;
+  height: 116px;
+  border-radius: 20%/5%;
+}
+
+.hexagon::before {
+  background-color: inherit;
+  content: "";
+  position: absolute;
+  left: 0;
+  -webkit-transform: rotate(-60deg);
+          transform: rotate(-60deg);
+}
+
+.hexagon::after {
+  background-color: inherit;
+  content: "";
+  position: absolute;
+  left: 0;
+  -webkit-transform: rotate(60deg);
+          transform: rotate(60deg);
+}
+
+.hexagon:nth-child(even) {
+  top: 59px;
+}
+
+.hexagon:hover {
+  background-color: gray;
+  cursor: pointer;
+  z-index: 105;
+}
+
+.hexagon:hover .hexagontent {
+  color: white;
+}
+
+.hexagon:active {
+  background-color: #ea9554;
+  z-index: 110;
+}
+
+.hexagontent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 140%;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  z-index: 100;
+}
+
+.hexagontent i {
+  font-size: 30px;
+}
+
+.ibws-fix {
+  /* inline-block whitespace fix */
+  font-size: 0;
+}
+
 .section-start {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1082,6 +1160,43 @@ main {
 
 .section-cv {
   height: 100vh;
+  position: relative;
+}
+
+.section-cv-box {
+  height: 100vh;
+}
+
+.section-cv .cv-img {
+  width: 100%;
+  height: 50%;
+  background-image: url(/picture/cv-image.jpg);
+  background-size: cover;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
+  opacity: .7;
+}
+
+.section-cv .cv-contener {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 200px;
+  height: 100px;
+  text-align: center;
+  bottom: 0;
+}
+
+.section-cv .cv-contener .open-popup {
+  position: relative;
+  top: 25%;
+  font-size: 30px;
+  margin: auto;
+  text-decoration: none;
+  color: #ea9554;
+  width: 100%;
+  height: 100%;
 }
 
 .section-cv .popup {
@@ -1177,83 +1292,5 @@ main {
   font-size: 20px;
   letter-spacing: .8rem;
   color: #ea9554;
-}
-
-.section-contact .honeycomb {
-  margin: 50px auto;
-  text-align: center;
-}
-
-.section-contact .hexagon {
-  position: relative;
-  display: inline-block;
-  margin: 1px 18px;
-  background-color: lightgray;
-  text-align: center;
-  color: gray;
-}
-
-.section-contact .hexagon, .section-contact .hexagon::before, .section-contact .hexagon::after {
-  width: 67px;
-  height: 116px;
-  border-radius: 20%/5%;
-}
-
-.section-contact .hexagon::before {
-  background-color: inherit;
-  content: "";
-  position: absolute;
-  left: 0;
-  -webkit-transform: rotate(-60deg);
-          transform: rotate(-60deg);
-}
-
-.section-contact .hexagon::after {
-  background-color: inherit;
-  content: "";
-  position: absolute;
-  left: 0;
-  -webkit-transform: rotate(60deg);
-          transform: rotate(60deg);
-}
-
-.section-contact .hexagon:nth-child(even) {
-  top: 59px;
-}
-
-.section-contact .hexagon:hover {
-  background-color: gray;
-  cursor: pointer;
-  z-index: 105;
-}
-
-.section-contact .hexagon:hover .hexagontent {
-  color: white;
-}
-
-.section-contact .hexagon:active {
-  background-color: #ea9554;
-  z-index: 110;
-}
-
-.section-contact .hexagontent {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 140%;
-  font-size: 1.4rem;
-  line-height: 1.2;
-  z-index: 100;
-}
-
-.section-contact .hexagontent i {
-  font-size: 30px;
-}
-
-.section-contact .ibws-fix {
-  /* inline-block whitespace fix */
-  font-size: 0;
 }
 /*# sourceMappingURL=main.css.map */
