--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,4 @@
+// OGÓLNE
 main {
     background: inherit;
 }
@@ -34,6 +35,75 @@ main {
     display: block;;
 }
 
+.honeycomb {
+    margin: 50px auto;
+    text-align: center;
+  }
+
+.hexagon {
+    position: relative;
+    display: inline-block;
+    margin: 1px 18px;
+    background-color: lightgray;
+    text-align: center;
+    color: gray;
+  }
+  .hexagon, .hexagon::before, .hexagon::after {
+    width: 67px;
+    height: 116px;
+    border-radius: 20%/5%;
+  }
+  .hexagon::before {
+    background-color: inherit;
+    content: "";
+    position: absolute;
+    left: 0;
+    transform: rotate(-60deg);
+  }
+  .hexagon::after {
+    background-color: inherit;
+    content: "";
+    position: absolute;
+    left: 0;
+    transform: rotate(60deg);
+  }
+  .hexagon:nth-child(even) {
+    top: 59px;
+  }
+  .hexagon:hover {
+    background-color: gray;
+    cursor: pointer;
+    z-index: 105;
+  }
+
+  .hexagon:hover .hexagontent {
+      color: white;
+  }
+
+  .hexagon:active {
+    background-color: $primary-color;
+    z-index: 110;
+  }
+  .hexagontent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 140%;
+    font-size: 1.4rem;
+    line-height: 1.2;
+    z-index: 100;
+
+    i {
+        font-size: 30px;
+    }
+  }
+  .ibws-fix {
+    /* inline-block whitespace fix */
+    font-size: 0;
+  }
+
+//   SEKCJE
 .section {
 
 
@@ -276,6 +346,42 @@ main {
 
     &-cv {
         height: 100vh;
+        position: relative;
+
+        &-box {
+            height: 100vh;
+        }
+
+        .cv-img {
+            width: 100%;
+            height: 50%;
+            background-image: url(/picture/cv-image.jpg);
+            background-size: cover;
+            filter: blur(1px);
+            opacity: .7;
+        }
+
+        .cv-contener {
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 200px;
+            height: 100px;
+            text-align: center;
+            bottom: 0;
+
+            .open-popup {
+                position: relative;
+                top: 25%;
+                font-size: 30px;
+                margin: auto;
+
+                text-decoration: none;
+                color: $primary-color;
+                width: 100%;
+                height: 100%;
+            }
+        }
         
         .popup{
             width: 100%;
@@ -370,73 +476,5 @@ main {
                 color: $primary-color;
             }
         }
-
-        .honeycomb {
-            margin: 50px auto;
-            text-align: center;
-          }
-
-        .hexagon {
-            position: relative;
-            display: inline-block;
-            margin: 1px 18px;
-            background-color: lightgray;
-            text-align: center;
-            color: gray;
-          }
-          .hexagon, .hexagon::before, .hexagon::after {
-            width: 67px;
-            height: 116px;
-            border-radius: 20%/5%;
-          }
-          .hexagon::before {
-            background-color: inherit;
-            content: "";
-            position: absolute;
-            left: 0;
-            transform: rotate(-60deg);
-          }
-          .hexagon::after {
-            background-color: inherit;
-            content: "";
-            position: absolute;
-            left: 0;
-            transform: rotate(60deg);
-          }
-          .hexagon:nth-child(even) {
-            top: 59px;
-          }
-          .hexagon:hover {
-            background-color: gray;
-            cursor: pointer;
-            z-index: 105;
-          }
-
-          .hexagon:hover .hexagontent {
-              color: white;
-          }
-
-          .hexagon:active {
-            background-color: $primary-color;
-            z-index: 110;
-          }
-          .hexagontent {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 140%;
-            font-size: 1.4rem;
-            line-height: 1.2;
-            z-index: 100;
-
-            i {
-                font-size: 30px;
-            }
-          }
-          .ibws-fix {
-            /* inline-block whitespace fix */
-            font-size: 0;
-          }
     }
 }
