--- a/sass/main.css
+++ b/sass/main.css
@@ -1169,12 +1169,13 @@ main {
 
 .section-cv .cv-img {
   width: 100%;
-  height: 50%;
   background-image: url(/picture/cv-image.jpg);
-  background-size: cover;
-  -webkit-filter: blur(1px);
-          filter: blur(1px);
   opacity: .7;
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .section-cv .cv-contener {
