--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -354,11 +354,15 @@ main {
 
         .cv-img {
             width: 100%;
-            height: 50%;
+            // height: 50%;
             background-image: url(/picture/cv-image.jpg);
+            // filter: blur(1px);
+            opacity: .7;            
+            min-height: 500px; 
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
             background-size: cover;
-            filter: blur(1px);
-            opacity: .7;
         }
 
         .cv-contener {
