--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -139,3 +139,17 @@
       opacity: 1;
     }
   }
+
+  @keyframes pulse {
+    0% {
+      transform :scale(.9);
+    }
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 50px rgba($primary-color, 0);
+    }
+      100% {
+      transform: scale(.9);
+      box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
+    }
+  }
