--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,6 @@
-<<<<<<< HEAD
 // OGÓLNE
 main {
     background: inherit;
-=======
 // .section-home {
 //     background-attachment: fixed;
 //     background-position: 50% 0;
@@ -33,7 +31,6 @@ main {
 .parallax-window {
     min-height: 100vh;
     background-image: linear-gradient(to right, rgba(black, 0.7));
->>>>>>> 81e8c0772e5167e9536287b309eb19b26febe546
 }
 
 .column {
@@ -514,4 +511,5 @@ main {
             }
         }
     }
+}
 }
