--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,11 +12,16 @@ html {
 
 body {
     box-sizing: border-box;
-    // background-color: black;
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    line-height: 1.7;
+    color: #777;
+
     background: radial-gradient(
-    circle closest-corner at center 125px,
-    #222,
-    black 60%
-  ) no-repeat;
+        circle closest-corner at center 125px,
+        #222,
+        black 60%
+    ) no-repeat;
+    
     background-repeat: no-repeat;
 }
