--- a/sass/main.css
+++ b/sass/main.css
@@ -835,7 +835,7 @@ footer {
 
 canvas {
   width: 100%;
-  height: 106vh;
+  height: 100vh;
   position: absolute;
 }
 
@@ -975,6 +975,10 @@ main .ibws-fix {
   font-size: 0;
 }
 
+.section-contener {
+  height: 100%;
+}
+
 .section-start {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1013,7 +1017,6 @@ main .ibws-fix {
 .section-about_photo {
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
-  position: absolute;
 }
 
 .section-about_photo img {
@@ -1028,13 +1031,10 @@ main .ibws-fix {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.section-about .row-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 
 .section-about .row-right {
@@ -1049,7 +1049,6 @@ main .ibws-fix {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 50px;
 }
 
 .section-certyfikaty-flex {
