--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -1,5 +1,9 @@
 .section {
 
+    &-contener {
+        height: 100%;
+    }
+
     &-start {
         display: flex;
         justify-content: center;
@@ -37,7 +41,6 @@
         &_photo {
             // width: 40rem;
             transform: rotate(-90deg);
-            position: absolute;   
             
             img {
                 width: 500px;
@@ -54,11 +57,12 @@
 
         .row {
             display: flex;
+            align-items: center;
+            height: 100%;
 
 
             &-left {
-                flex: 1;
-                position: relative;
+                // flex: 1;
             }
 
             &-right {
@@ -72,7 +76,6 @@
         height: 100vh;
         width: 100%;
         align-items: center;
-        margin-top: 50px;
 
         &-flex {
             display: flex;
