--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,9 +11,6 @@
         .arrow-animated {
             position: absolute;
             display: flex;
-            // left: 50%;
-            // top: 50%;
-            // transform: translate(-50%, -50%);
             color: white;
             font-size: 20px;
             transition: all .5s;
@@ -31,5 +28,10 @@
             }
     
         }    
+    }
+
+    &-contact {
+        position: relative;
+        bottom: 10px;
     }
 }
