--- a/sass/main.css
+++ b/sass/main.css
@@ -586,6 +586,11 @@ body {
   opacity: 1;
 }
 
+.btn-contact {
+  position: relative;
+  bottom: 10px;
+}
+
 footer {
   height: 25vh;
 }
@@ -1218,14 +1223,13 @@ main .ibws-fix {
 
 .section-cv {
   height: 100vh;
-  position: relative;
 }
 
 .section-cv-box {
   height: 100vh;
 }
 
-.section-cv .cv-img {
+.section-cv-box .cv-img {
   width: 100%;
   background-image: url(/picture/cv-image.jpg);
   opacity: .7;
@@ -1234,9 +1238,11 @@ main .ibws-fix {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
+  clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
 }
 
-.section-cv .cv-contener {
+.section-cv-box .cv-contener {
   position: absolute;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -1247,7 +1253,7 @@ main .ibws-fix {
   bottom: 0;
 }
 
-.section-cv .cv-contener .open-popup {
+.section-cv-box .cv-contener .open-popup {
   position: relative;
   top: 25%;
   font-size: 30px;
@@ -1258,7 +1264,7 @@ main .ibws-fix {
   height: 100%;
 }
 
-.section-cv .popup {
+.section-cv-box .popup {
   width: 100%;
   height: 100vh;
   display: none;
@@ -1267,7 +1273,7 @@ main .ibws-fix {
   right: 0;
 }
 
-.section-cv .popup:before {
+.section-cv-box .popup:before {
   content: "";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1281,7 +1287,7 @@ main .ibws-fix {
           animation: open-cv-animation 0.6s cubic-bezier(0.83, 0.04, 0, 1.16) 0.65s both;
 }
 
-.section-cv .popup:after {
+.section-cv-box .popup:after {
   content: "";
   width: 0;
   height: 2px;
@@ -1295,7 +1301,7 @@ main .ibws-fix {
   margin-top: -1px;
 }
 
-.section-cv .popup-block {
+.section-cv-box .popup-block {
   height: calc(100vh - 40px);
   padding: 5% 15%;
   -webkit-box-sizing: border-box;
@@ -1307,7 +1313,7 @@ main .ibws-fix {
           animation: fade .5s ease-out 1.3s both;
 }
 
-.section-cv .popup-close {
+.section-cv-box .popup-close {
   width: 3.2rem;
   height: 3.2rem;
   text-indent: -9999px;
@@ -1326,13 +1332,13 @@ main .ibws-fix {
   transition: transform .25s, opacity .25s, -webkit-transform .25s;
 }
 
-.section-cv .popup-close:hover {
+.section-cv-box .popup-close:hover {
   -webkit-transform: rotate(270deg);
   transform: rotate(270deg);
   opacity: 1;
 }
 
-.section-cv #popup-cv:target {
+.section-cv-box #popup-cv:target {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
