Added background img to section cv and added pulse button

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -9,6 +9,7 @@
 .u-margin-top-big{ margin-top: 8rem; }
 
 .padding-top-big { padding-top: 5.9rem; }
+.padding-bottom-big { padding-bottom: 7.9rem; }
 
 .u-left { text-align: left; }
 .u-right { text-align: right; }
