--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -35,3 +35,38 @@
         bottom: 10px;
     }
 }
+
+.button-cv {
+    position: relative;
+    right: 20%;
+    float: right;
+    top: -40%;
+    text-decoration: none;
+}
+
+.button-pulse {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+    display: block;
+    width: 100px;
+    height: 100px;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 100px;
+    letter-spacing: -1px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    background: $primary-color;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 rgba($primary-color, .5);
+    -webkit-animation: pulse 1.5s infinite;
+
+    &:hover {
+      -webkit-animation: none;
+    }
+  }
