--- a/sass/main.css
+++ b/sass/main.css
@@ -531,6 +531,10 @@ body {
   padding-top: 5.9rem;
 }
 
+.padding-bottom-big {
+  padding-bottom: 7.9rem;
+}
+
 .u-left {
   text-align: left;
 }
@@ -589,6 +593,42 @@ body {
 .btn-contact {
   position: relative;
   bottom: 10px;
+}
+
+.button-cv {
+  position: relative;
+  right: 20%;
+  float: right;
+  top: -40%;
+  text-decoration: none;
+}
+
+.button-pulse {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  display: block;
+  width: 100px;
+  height: 100px;
+  font-size: 2.5em;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 100px;
+  letter-spacing: -1px;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  background: #ea9554;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 0 0 rgba(234, 149, 84, 0.5);
+          box-shadow: 0 0 0 0 rgba(234, 149, 84, 0.5);
+  -webkit-animation: pulse 1.5s infinite;
+}
+
+.button-pulse:hover {
+  -webkit-animation: none;
 }
 
 footer {
@@ -1226,11 +1266,12 @@ main .ibws-fix {
 }
 
 .section-cv-box {
-  height: 100vh;
+  height: 91.7vh;
 }
 
 .section-cv-box .cv-img {
   width: 100%;
+  height: 100%;
   background-image: url(/picture/cv-image.jpg);
   opacity: .7;
   min-height: 500px;
