--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -247,10 +247,11 @@
         // position: relative;
 
         &-box {
-            height: 100vh;
+            height: 91.7vh;
 
             .cv-img {
                 width: 100%;
+                height: 100%;
                 background-image: url(/picture/cv-image.jpg);
                 opacity: .7;            
                 min-height: 500px; 
