--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -364,29 +364,34 @@
     &-contact {
         height: 100vh;
         text-align: center;
-        
-        .contact-text {
 
-            span {
-                font-size: 40px;
-                color: #fff;
-                font-weight: 600;
-                text-shadow: 0px 0px 4px $primary-color;
+        .box {
 
-                &:nth-child(1) {
-                    text-transform: uppercase;
-                }
+            .contact-text {
 
-                &:nth-child(3) {
-                    letter-spacing: .5rem;
-                }
-            }
+                span {
+                    font-size: 40px;
+                    color: #fff;
+                    font-weight: 600;
+                    text-shadow: 0px 0px 4px $primary-color;
     
-            p {
-                font-size: 20px;
-                letter-spacing: .8rem;
-                color: $primary-color;
-            }
+                    &:nth-child(1) {
+                        text-transform: uppercase;
+                    }
+    
+                    &:nth-child(3) {
+                        letter-spacing: .5rem;
+                    }
+                }
+        
+                p {
+                    font-size: 20px;
+                    letter-spacing: .8rem;
+                    color: $primary-color;
+                }
+            }   
+
         }
+        
     }
 }
