Added mixnin and nav bg color

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -31,3 +31,9 @@
         clear: both;
     }
 }
+
+@mixin object($width, $height, $bg) {
+    width: $width;
+    height: $height;
+    background-color: $bg;
+}
