--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -39,10 +39,8 @@
 
 
 .header {
+    @include object(100%, 70px, $nav-bg);
     position: fixed;
-    height: 70px;
-    width: 100%;
-    // background-color: rgba(255, 255, 255, 0.2);
     z-index: 1;
 
     &-logo {
