--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -61,9 +61,9 @@
             height: 100%;
 
 
-            &-left {
-                // flex: 1;
-            }
+            // &-left {
+            //     // flex: 1;
+            // }
 
             &-right {
                 flex: 1;
