--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,13 +6,10 @@
     box-sizing: border-box;
 }
 
-html {
-    font-size: 62.5%;
-}
-
-body {
+html, body {
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
+    font-size: 62.5%;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
@@ -24,4 +21,5 @@ body {
     ) no-repeat;
     
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
