--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -39,21 +39,58 @@
 
 
 .header {
-    @include object(100%, 70px, $nav-bg);
+    @include object(100%, 70px, 'transparetn');
     position: fixed;
     z-index: 1;
+    transition: all 0.5s;
 
-    &-logo {
+
+    .logo {
         float: left;
         position: fixed;
         font-size: 30px;
 
-        img {
+
+        &-img {
             width: 60px;
             position: relative;
             top: 13px;
             left: 10px;
             opacity: .7;
+            transition: all 0.5s;
+
+        }
+
+        span {
+            font-size: 20px;
+            padding-left: 25px;
+            color: #ccc;
+            transition: all 0.5s;
+
+        }
+    }
+
+    &--scroll {
+        box-shadow: 0 4px 30px -5px rgba(#000, 0.2);
+        height: 50px;
+        transition: all 0.3s;
+        background-color: $nav-bg;
+
+        
+        .logo {
+
+            &-img {
+                width: 50px;
+                top: 5px;
+            }
+            
+            &-text {
+                opacity: 0;
+            }
+        }
+
+        .navbar {
+            padding: 5px;
         }
     }
 }
@@ -61,6 +98,8 @@
 .navbar {
     text-align: right;
     padding: 20px;
+    transition: all 0.5s;
+
 
     &-contener {
         display: inline-flex;
@@ -201,7 +240,7 @@
 
 canvas {
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     position: absolute;
 }
 
