--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,10 +6,13 @@
     box-sizing: border-box;
 }
 
-html, body {
+html {
+    font-size: 62.5%;
+}
+
+body {
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
-    font-size: 62.5%;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
