--- a/sass/main.css
+++ b/sass/main.css
@@ -477,11 +477,14 @@
           box-sizing: border-box;
 }
 
-html, body {
+html {
+  font-size: 62.5%;
+}
+
+body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: 'Playfair Display', serif;
-  font-size: 62.5%;
   font-weight: 400;
   line-height: 1.7;
   color: #777;
