--- a/sass/main.css
+++ b/sass/main.css
@@ -741,7 +741,7 @@ footer {
   left: 0;
   right: 100%;
   bottom: 0;
-  background: #ccc;
+  background: #ea9554;
   height: 4px;
   -webkit-transition-property: right;
   transition-property: right;
@@ -786,9 +786,11 @@ footer {
 }
 
 .header .logo span {
+  position: relative;
+  top: 6px;
+  left: 30px;
   font-size: 20px;
-  padding-left: 25px;
-  color: #ccc;
+  color: #fff;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -846,7 +848,7 @@ footer {
 
 .navbar-items a {
   text-decoration: none;
-  color: #ea9554;
+  color: #fff;
   font-size: 20px;
 }
 
