Added @mixin respond

--- a/sass/main.css
+++ b/sass/main.css
@@ -1,3 +1,10 @@
+/*
+0 - 600:     Phone
+600 - 900:   Tablet portrait
+900 - 1200:  Tablet landscape
+1200 - 1800: normal style aply
+1800++ Big desktop
+*/
 @-webkit-keyframes start {
   0% {
     opacity: 0;
@@ -11,7 +18,6 @@
             transform: translateY(0px) scale(1);
   }
 }
-
 @keyframes start {
   0% {
     opacity: 0;
