--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+
+    @include respond(tab-land) {
+        font-size: 50%; // 1rem = 8px, 8/16 = 50%
+    }
+    @include respond(tab-port) {
+        font-size: 37.5%; // 1rem = 6px, 6/16 = 37.5%
+    }
+    @include respond(phone) {
+        font-size: 25%; // 1rem = 4px, 4/16 = 25%
+    }
+    @include respond(big-desktop) {
+        font-size: 75%; // 1rem = 12px, 12/16 = 
+    }
 }
 
 body {
