--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -48,11 +48,11 @@
     .logo {
         float: left;
         position: fixed;
-        font-size: 30px;
+        font-size: 3em;
 
 
         &-img {
-            width: 60px;
+            width: 3em;
             position: relative;
             top: 13px;
             left: 10px;
@@ -65,7 +65,7 @@
             position: relative;
             top: 6px;
             left: 30px;
-            font-size: 20px;
+            font-size: 1em;
             color: $nav-text-color;
             transition: all 0.5s;
 
@@ -115,7 +115,7 @@
         display: inline-block;
         padding: 10px;
         color: white;
-        font-size: 1.5rem;
+        font-size: 1.5em;
         cursor: pointer;
         margin: 0 20px;
         line-height: 18px;
@@ -131,7 +131,7 @@
         a {
             text-decoration: none;
             color: $nav-text-color;
-            font-size: 20px;
+            font-size: 1.5em;
         }
     }
 }
@@ -144,8 +144,8 @@
 
     .name {
         display: inline-block;
-        font-size: 4.5rem;
-        letter-spacing: .5rem;
+        font-size: 4.5em;
+        letter-spacing: .3em;
         text-transform: uppercase;
         background: radial-gradient(
           circle farthest-corner at center center,
@@ -164,7 +164,7 @@
         // font-family: 'Monoton', cursive;
         font-family: 'Warnes', cursive;
         // font-weight: 600;        
-        font-size: 1.8rem;        
+        font-size: 1.8em;        
         position: absolute;        
         top: 134px;        
         left: 3px;
@@ -181,7 +181,7 @@
         // font-family: 'Monoton', cursive; 
         font-family: 'Warnes', cursive;      
         // font-weight: 600;        
-        font-size: 1.8rem;        
+        font-size: 1.8em;        
         position: absolute;        
         top: 134px;        
         left: 25px;
@@ -206,7 +206,7 @@
         // font-family: 'Monoton', cursive; 
         font-family: 'Warnes', cursive;      
         // font-weight: 600;        
-        font-size: 1.8rem;        
+        font-size: 1.8em;        
         position: absolute;        
         top: 134px;        
         left: 60px;
@@ -234,7 +234,7 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            width: 100px;
+            width: 10em;
             opacity: .7;
         }
       }
