--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,15 +16,15 @@ main {
 .heading-primary {
 
     &--main {
-        font-size: 50px;
+        font-size: 5em;
         text-transform: uppercase bold;
         letter-spacing: 2px;
     }
 
     &--sub {
-        font-size: 30px;
+        font-size: 3em;
         text-transform: lowercase;
-        letter-spacing: 3px;
+        letter-spacing: 0.3em;
     }
 }
 
@@ -34,11 +34,11 @@ main {
 }
 
 .column {
-	margin: 15px 15px 0;
+	margin: 1.5em 1.5em 0;
 	padding: 0;
 }
 .column:last-child {
-	padding-bottom: 60px;
+	padding-bottom: 6em;
 }
 .column::after {
 	content: '';
@@ -48,9 +48,9 @@ main {
 .column a.lightbox {
 	position: relative;
 	float: left;
-	width: 300px;
-	height: 200px;
-	margin: 0 0 0 25px;
+	width: 30em;
+	height: 20em;
+	margin: 0 0 0 2.5em;
 	padding: 0;
 }
 .column a.lightbox:first-child {
@@ -66,14 +66,14 @@ main {
 }
 
 .honeycomb {
-    margin: 50px auto;
+    margin: 5em auto;
     text-align: center;
   }
 
 .hexagon {
     position: relative;
     display: inline-block;
-    margin: 1px 18px;
+    margin: 0.1em 1.8em;
     background-color: lightgray;
     text-align: center;
     color: gray;
