Revert "Changed font size from px to em"
This reverts commit 9fb8fa0d2923970ade8b9d1690072bba6f9952e7.

--- a/sass/main.css
+++ b/sass/main.css
@@ -487,30 +487,6 @@ html {
   font-size: 62.5%;
 }
 
-@media (max-width: 75em) {
-  html {
-    font-size: 50%;
-  }
-}
-
-@media (max-width: 56.25em) {
-  html {
-    font-size: 37.5%;
-  }
-}
-
-@media (max-width: 37.5em) {
-  html {
-    font-size: 25%;
-  }
-}
-
-@media (min-width: 112.5em) {
-  html {
-    font-size: 75%;
-  }
-}
-
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -802,11 +778,11 @@ footer {
 .header .logo {
   float: left;
   position: fixed;
-  font-size: 3em;
+  font-size: 30px;
 }
 
 .header .logo-img {
-  width: 3em;
+  width: 60px;
   position: relative;
   top: 13px;
   left: 10px;
@@ -819,7 +795,7 @@ footer {
   position: relative;
   top: 6px;
   left: 30px;
-  font-size: 1em;
+  font-size: 20px;
   color: #fff;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -870,7 +846,7 @@ footer {
   display: inline-block;
   padding: 10px;
   color: white;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   cursor: pointer;
   margin: 0 20px;
   line-height: 18px;
@@ -879,7 +855,7 @@ footer {
 .navbar-items a {
   text-decoration: none;
   color: #fff;
-  font-size: 1.5em;
+  font-size: 20px;
 }
 
 .welcome-text {
@@ -888,8 +864,8 @@ footer {
 
 .welcome-text .name {
   display: inline-block;
-  font-size: 4.5em;
-  letter-spacing: .3em;
+  font-size: 4.5rem;
+  letter-spacing: .5rem;
   text-transform: uppercase;
   background: radial-gradient(circle farthest-corner at center center, #ccc, #333) no-repeat;
   background-clip: text;
@@ -902,7 +878,7 @@ footer {
 .welcome-text .neon1 {
   color: #ea9554;
   font-family: 'Warnes', cursive;
-  font-size: 1.8em;
+  font-size: 1.8rem;
   position: absolute;
   top: 134px;
   left: 3px;
@@ -913,7 +889,7 @@ footer {
 .welcome-text .neon2 {
   color: #ea9554;
   font-family: 'Warnes', cursive;
-  font-size: 1.8em;
+  font-size: 1.8rem;
   position: absolute;
   top: 134px;
   left: 25px;
@@ -933,7 +909,7 @@ footer {
 .welcome-text .neon3 {
   color: #ea9554;
   font-family: 'Warnes', cursive;
-  font-size: 1.8em;
+  font-size: 1.8rem;
   position: absolute;
   top: 134px;
   left: 60px;
@@ -956,7 +932,7 @@ footer {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 10em;
+  width: 100px;
   opacity: .7;
 }
 
@@ -971,15 +947,15 @@ main {
 }
 
 main .heading-primary--main {
-  font-size: 5em;
+  font-size: 50px;
   text-transform: uppercase bold;
   letter-spacing: 2px;
 }
 
 main .heading-primary--sub {
-  font-size: 3em;
+  font-size: 30px;
   text-transform: lowercase;
-  letter-spacing: 0.3em;
+  letter-spacing: 3px;
 }
 
 main .parallax-window {
@@ -989,12 +965,12 @@ main .parallax-window {
 }
 
 main .column {
-  margin: 1.5em 1.5em 0;
+  margin: 15px 15px 0;
   padding: 0;
 }
 
 main .column:last-child {
-  padding-bottom: 6em;
+  padding-bottom: 60px;
 }
 
 main .column::after {
@@ -1006,9 +982,9 @@ main .column::after {
 main .column a.lightbox {
   position: relative;
   float: left;
-  width: 30em;
-  height: 20em;
-  margin: 0 0 0 2.5em;
+  width: 300px;
+  height: 200px;
+  margin: 0 0 0 25px;
   padding: 0;
 }
 
@@ -1025,14 +1001,14 @@ main .anchor {
 }
 
 main .honeycomb {
-  margin: 5em auto;
+  margin: 50px auto;
   text-align: center;
 }
 
 main .hexagon {
   position: relative;
   display: inline-block;
-  margin: 0.1em 1.8em;
+  margin: 1px 18px;
   background-color: lightgray;
   text-align: center;
   color: gray;
@@ -1147,11 +1123,11 @@ main .ibws-fix {
 }
 
 .section-about_photo img {
-  width: 50em;
+  width: 500px;
 }
 
 .section-about_text p {
-  font-size: 2.25em;
+  font-size: 20px;
 }
 
 .section-about .row {
@@ -1222,8 +1198,8 @@ main .ibws-fix {
 }
 
 .section-certyfikaty-flex--box a.lightbox img {
-  height: 20em;
-  width: 30em;
+  height: 200px;
+  width: 300px;
   border: 3px solid white;
   -webkit-box-shadow: 0px 0px 8px white;
           box-shadow: 0px 0px 8px white;
@@ -1245,7 +1221,7 @@ main .ibws-fix {
   margin: 0;
   padding: 0;
   color: #ea9554;
-  font-size: 1.12em;
+  font-size: 18px;
   text-decoration: none;
   text-align: center;
   -webkit-transition: .3s ease-in-out;
@@ -1379,7 +1355,7 @@ main .ibws-fix {
 .section-cv-box .cv-contener .open-popup {
   position: relative;
   top: 25%;
-  font-size: 1.87em;
+  font-size: 30px;
   margin: auto;
   text-decoration: none;
   color: #ea9554;
@@ -1474,7 +1450,7 @@ main .ibws-fix {
 }
 
 .section-contact .box .contact-text span {
-  font-size: 2.5em;
+  font-size: 40px;
   color: #fff;
   font-weight: 600;
   text-shadow: 0px 0px 4px #ea9554;
@@ -1485,12 +1461,12 @@ main .ibws-fix {
 }
 
 .section-contact .box .contact-text span:nth-child(3) {
-  letter-spacing: .3em;
+  letter-spacing: .5rem;
 }
 
 .section-contact .box .contact-text p {
-  font-size: 1.25em;
-  letter-spacing: .5em;
+  font-size: 20px;
+  letter-spacing: .8rem;
   color: #ea9554;
 }
 /*# sourceMappingURL=main.css.map */
