--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -47,19 +47,17 @@
 1800++ Big desktop
 */
 
-// 1em = 16px
-
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
-        @media (max-width: 37.5em) { @content }; // 600px
+        @media (max-width: 600px) { @content };
     }
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) { @content }; // 900px
+        @media (max-width: 900px) { @content };
     }
     @if $breakpoint == tab-land {
-        @media (max-width: 75em) { @content }; // 1200px
+        @media (max-width: 1200px) { @content };
     }
     @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) { @content }; // 1800px
+        @media (min-width: 1800px) { @content };
     }
 }
