--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -43,14 +43,14 @@
             transform: rotate(-90deg);
             
             img {
-                width: 50em;
+                width: 500px;
             }
         }
 
         &_text {
             
             p {
-                font-size: 2.25em;
+                font-size: 20px;
             }
 
         }
@@ -113,8 +113,8 @@
                 }
                 
                 a.lightbox img {
-                    height: 20em;
-                    width: 30em;
+                    height: 200px;
+                    width: 300px;
                     border: 3px solid white;
                     box-shadow: 0px 0px 8px white;
                 }  
@@ -136,7 +136,7 @@
                 margin: 0;
                 padding: 0;
                 color: $primary-color;
-                font-size: 1.12em;
+                font-size: 18px;
                 text-decoration: none;
                 text-align: center;
                 -webkit-transition: .3s ease-in-out;
@@ -275,7 +275,7 @@
                 .open-popup {
                     position: relative;
                     top: 25%;
-                    font-size: 1.87em;
+                    font-size: 30px;
                     margin: auto;
 
                     text-decoration: none;
@@ -370,7 +370,7 @@
             .contact-text {
 
                 span {
-                    font-size: 2.5em;
+                    font-size: 40px;
                     color: #fff;
                     font-weight: 600;
                     text-shadow: 0px 0px 4px $primary-color;
@@ -380,13 +380,13 @@
                     }
     
                     &:nth-child(3) {
-                        letter-spacing: .3em;
+                        letter-spacing: .5rem;
                     }
                 }
         
                 p {
-                    font-size: 1.25em;
-                    letter-spacing: .5em;
+                    font-size: 20px;
+                    letter-spacing: .8rem;
                     color: $primary-color;
                 }
             }   
