--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; // 1rem = 10px
+
+    @include respond(tab-land) {
+        font-size: 50%; // 8px
+    }
+    @include respond(tab-port) {
+        font-size: 37.5%; // 6px
+    }
+    @include respond(phone) {
+        font-size: 25%; // 4px
+    }
+    @include respond(big-desktop) {
+        font-size: 75%; // 12px
+    }
 }
 
 body {
