--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,8 +8,16 @@
 .u-margin-top-medium{ margin-top: 4rem; }
 .u-margin-top-big{ margin-top: 8rem; }
 
-.padding-top-big { padding-top: 5rem; }
-.padding-bottom-big { padding-bottom: 7.9rem; }
+.padding-top-big { 
+    padding-top: 5rem; 
+
+    @include respond(tab-port) {
+        padding-top: 8.4rem;
+    }
+}
+.padding-bottom-big { 
+    padding-bottom: 7.9rem; 
+}
 
 .u-left { text-align: left; }
 .u-right { text-align: right; }
