--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -50,7 +50,7 @@
         &_text {
             
             p {
-                font-size: 20px;
+                font-size: 2.5rem;
             }
 
         }
@@ -67,6 +67,16 @@
 
             &-right {
                 flex: 1;
+                height: 80%;
+                padding: 50px;
+                overflow: scroll;
+
+                @include respond(tab-port) {
+                    padding: 8px;
+                }
+                @include respond(phone) {
+                    padding: 0;
+                }
             }
 
         }
@@ -248,6 +258,13 @@
 
         &-box {
             height: 91.7vh;
+
+            @include respond(tab-port) {
+                height: 93.1vh;
+            }
+            @include respond(phone) {
+                height: 94.7vh;
+            }
 
             .cv-img {
                 width: 100%;
