Another change size

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -52,6 +52,11 @@
     float: right;
     top: -40%;
     text-decoration: none;
+
+    @include respond(phone) {
+        right: 0;
+        float: none;
+    }
 }
 
 .button-pulse {
