--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -137,7 +137,7 @@
         a {
             text-decoration: none;
             color: $nav-text-color;
-            font-size: 20px;
+            font-size: 2.2rem;
         }
     }
 }
