--- a/sass/main.css
+++ b/sass/main.css
@@ -495,19 +495,19 @@ html {
 
 @media (max-width: 900px) {
   html {
-    font-size: 37.5%;
+    font-size: 43.75%;
   }
 }
 
 @media (max-width: 600px) {
   html {
-    font-size: 25%;
+    font-size: 31.2%;
   }
 }
 
 @media (min-width: 1800px) {
   html {
-    font-size: 75%;
+    font-size: 65%;
   }
 }
 
@@ -559,7 +559,7 @@ body {
 }
 
 .padding-top-big {
-  padding-top: 5rem;
+  padding-top: 4.6rem;
 }
 
 @media (max-width: 900px) {
@@ -644,6 +644,13 @@ body {
   float: right;
   top: -40%;
   text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .button-cv {
+    right: 0;
+    float: none;
+  }
 }
 
 .button-pulse {
@@ -891,7 +898,7 @@ footer {
 .navbar-items a {
   text-decoration: none;
   color: #fff;
-  font-size: 20px;
+  font-size: 2.2rem;
 }
 
 .welcome-text {
@@ -1000,120 +1007,6 @@ main .parallax-window {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7));
 }
 
-main .column {
-  margin: 15px 15px 0;
-  padding: 0;
-}
-
-main .column:last-child {
-  padding-bottom: 60px;
-}
-
-main .column::after {
-  content: '';
-  clear: both;
-  display: block;
-}
-
-main .column a.lightbox {
-  position: relative;
-  float: left;
-  width: 300px;
-  height: 200px;
-  margin: 0 0 0 25px;
-  padding: 0;
-}
-
-main .column a.lightbox:first-child {
-  margin-left: 0;
-}
-
-main .i-color {
-  color: #ea9554;
-}
-
-main .anchor {
-  display: block;
-}
-
-main .honeycomb {
-  margin: 50px auto;
-  text-align: center;
-}
-
-main .hexagon {
-  position: relative;
-  display: inline-block;
-  margin: 1px 18px;
-  background-color: lightgray;
-  text-align: center;
-  color: gray;
-}
-
-main .hexagon, main .hexagon::before, main .hexagon::after {
-  width: 67px;
-  height: 116px;
-  border-radius: 20%/5%;
-}
-
-main .hexagon::before {
-  background-color: inherit;
-  content: "";
-  position: absolute;
-  left: 0;
-  -webkit-transform: rotate(-60deg);
-          transform: rotate(-60deg);
-}
-
-main .hexagon::after {
-  background-color: inherit;
-  content: "";
-  position: absolute;
-  left: 0;
-  -webkit-transform: rotate(60deg);
-          transform: rotate(60deg);
-}
-
-main .hexagon:nth-child(even) {
-  top: 59px;
-}
-
-main .hexagon:hover {
-  background-color: gray;
-  cursor: pointer;
-  z-index: 105;
-}
-
-main .hexagon:hover .hexagontent {
-  color: white;
-}
-
-main .hexagon:active {
-  background-color: #ea9554;
-  z-index: 110;
-}
-
-main .hexagontent {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 140%;
-  font-size: 1.4rem;
-  line-height: 1.2;
-  z-index: 100;
-}
-
-main .hexagontent i {
-  font-size: 30px;
-}
-
-main .ibws-fix {
-  /* inline-block whitespace fix */
-  font-size: 0;
-}
-
 .section-contener {
   height: 100%;
 }
@@ -1153,19 +1046,6 @@ main .ibws-fix {
   width: 100%;
 }
 
-.section-about_photo {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-}
-
-.section-about_photo img {
-  width: 500px;
-}
-
-.section-about_text p {
-  font-size: 2.5rem;
-}
-
 .section-about .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1176,13 +1056,65 @@ main .ibws-fix {
   height: 100%;
 }
 
+.section-about .row-left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.section-about .row-left .section-about_photo {
+  position: relative;
+}
+
+.section-about .row-left .section-about_photo img {
+  width: 40rem;
+  border-radius: 30px;
+  margin-left: 90px;
+}
+
+@media (max-width: 900px) {
+  .section-about .row-left .section-about_photo img {
+    width: 220px;
+    height: 290px;
+    border-radius: 30px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-about .row-left .section-about_photo img {
+    width: 150px;
+    height: 190px;
+    border-radius: 30px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .section-about .row-left {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+    padding: 20px 5px 5px 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-about .row-left {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+    padding: 30px 10px 10px 10px;
+  }
+}
+
 .section-about .row-right {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   height: 80%;
   padding: 50px;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 @media (max-width: 900px) {
@@ -1194,6 +1126,40 @@ main .ibws-fix {
 @media (max-width: 600px) {
   .section-about .row-right {
     padding: 0;
+  }
+}
+
+.section-about .row-right .section-about_text p {
+  font-size: 2.4rem;
+}
+
+@media (max-width: 900px) {
+  .section-about .row-right .section-about_text p {
+    padding: 10px 30px 20px 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-about .row-right .section-about_text p {
+    padding: 10px 30px 20px 30px;
+  }
+}
+
+@media (max-width: 900px) {
+  .section-about .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 600px) {
+  .section-about .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -1217,6 +1183,7 @@ main .ibws-fix {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
+  text-align: center;
 }
 
 .section-certyfikaty-flex--box {
@@ -1228,29 +1195,9 @@ main .ibws-fix {
   overflow: hidden;
 }
 
-.section-certyfikaty-flex--box .lightbox::before {
-  position: absolute;
-  top: 0;
-  left: -75%;
-  z-index: 2;
-  display: block;
-  content: '';
-  width: 50%;
-  height: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.3)));
-  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
-  -webkit-transform: skewX(-25deg);
-  transform: skewX(-25deg);
-}
-
-.section-certyfikaty-flex--box .lightbox:hover::before {
-  -webkit-animation: shine .75s;
-  animation: shine .75s;
-}
-
 .section-certyfikaty-flex--box a.lightbox img {
-  height: 200px;
-  width: 300px;
+  height: 20rem;
+  width: 30rem;
   border: 3px solid white;
   -webkit-box-shadow: 0px 0px 8px white;
           box-shadow: 0px 0px 8px white;
@@ -1260,6 +1207,12 @@ main .ibws-fix {
   opacity: 1;
   bottom: -8px;
   position: relative;
+}
+
+@media (max-width: 900px) {
+  .section-certyfikaty-flex--box {
+    margin: 0;
+  }
 }
 
 .section-certyfikaty-flex .loop-icon {
@@ -1370,17 +1323,23 @@ main .ibws-fix {
   transition: all .5s ease-in-out;
 }
 
+@media (max-width: 600px) {
+  .section-certyfikaty-flex {
+    text-align: center;
+  }
+}
+
 .section-cv {
   height: 100vh;
 }
 
 .section-cv-box {
-  height: 91.7vh;
+  height: 92.7vh;
 }
 
 @media (max-width: 900px) {
   .section-cv-box {
-    height: 93.1vh;
+    height: 93.6vh;
   }
 }
 
@@ -1402,6 +1361,14 @@ main .ibws-fix {
   background-size: cover;
   -webkit-clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
   clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
+}
+
+@media (max-width: 600px) {
+  .section-cv-box .cv-img {
+    height: 60%;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+  }
 }
 
 .section-cv-box .cv-contener {
@@ -1475,6 +1442,12 @@ main .ibws-fix {
           animation: fade .5s ease-out 1.3s both;
 }
 
+@media (max-width: 900px) {
+  .section-cv-box .popup-block {
+    font-size: 2rem;
+  }
+}
+
 .section-cv-box .popup-close {
   width: 3.2rem;
   height: 3.2rem;
@@ -1500,6 +1473,14 @@ main .ibws-fix {
   opacity: 1;
 }
 
+@media (max-width: 900px) {
+  .section-cv-box .popup-close {
+    width: 9rem;
+    height: 9rem;
+    font-size: 2rem;
+  }
+}
+
 .section-cv-box #popup-cv:target {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1512,8 +1493,12 @@ main .ibws-fix {
   text-align: center;
 }
 
+.section-contact .box {
+  height: 70%;
+}
+
 .section-contact .box .contact-text span {
-  font-size: 40px;
+  font-size: 5rem;
   color: #fff;
   font-weight: 600;
   text-shadow: 0px 0px 4px #ea9554;
@@ -1531,5 +1516,20 @@ main .ibws-fix {
   font-size: 20px;
   letter-spacing: .8rem;
   color: #ea9554;
+}
+
+@media (max-width: 900px) {
+  .section-contact .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
