--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -37,23 +37,6 @@
     &-about {
         height: 100vh;
         width: 100%;
-        
-        &_photo {
-            // width: 40rem;
-            transform: rotate(-90deg);
-            
-            img {
-                width: 500px;
-            }
-        }
-
-        &_text {
-            
-            p {
-                font-size: 2.5rem;
-            }
-
-        }
 
         .row {
             display: flex;
@@ -61,15 +44,47 @@
             height: 100%;
 
 
-            // &-left {
-            //     // flex: 1;
-            // }
+            &-left {
+                flex: 1;
+
+                .section-about_photo {
+                    position: relative;
+            
+                    img {
+                        width: 40rem;
+                        border-radius: 30px;
+                        margin-left: 90px;
+
+                        @include respond(tab-port) {
+                            width: 220px;
+                            height: 290px;
+                            border-radius: 30px;
+                            margin-left: 0;
+                        }
+                        @include respond(phone) {
+                            width: 150px;
+                            height: 190px;
+                            border-radius: 30px;
+                            margin-left: 0;
+                        }
+                    }
+                }
+
+                @include respond(tab-port) {
+                    flex: 0;
+                    padding: 20px 5px 5px 5px;
+                }
+                @include respond(phone) {
+                    flex: 0;
+                    padding: 30px 10px 10px 10px;
+                }
+            }
 
             &-right {
                 flex: 1;
                 height: 80%;
                 padding: 50px;
-                overflow: scroll;
+                overflow-y: auto;
 
                 @include respond(tab-port) {
                     padding: 8px;
@@ -77,8 +92,28 @@
                 @include respond(phone) {
                     padding: 0;
                 }
-            }
 
+                .section-about_text {
+            
+                    p {
+                        font-size: 2.4rem;
+
+                        @include respond(tab-port) {
+                            padding: 10px 30px 20px 30px;
+                        }
+                        @include respond(phone) {
+                            padding: 10px 30px 20px 30px;
+                        }
+                    }
+        
+                }
+            }
+            @include respond(tab-port) {
+                flex-direction: column;
+            }
+            @include respond(phone) {
+                flex-direction: column;
+            }
         }
     }
 
@@ -93,6 +128,7 @@
             height: 100%;
             justify-content: center;
             align-content: center;
+            text-align: center;
 
             &--box {
                 margin: 20px;   
@@ -101,30 +137,30 @@
                     position: relative;
                     overflow: hidden;
 
-                    &::before {
-                        position: absolute;
-                        top: 0;
-                        left: -75%;
-                        z-index: 2;
-                        display: block;
-                        content: '';
-                        width: 50%;
-                        height: 100%;
-                        background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                        background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                        -webkit-transform: skewX(-25deg);
-                        transform: skewX(-25deg);
-                    }
+                    // &::before {
+                    //     position: absolute;
+                    //     top: 0;
+                    //     left: -75%;
+                    //     z-index: 2;
+                    //     display: block;
+                    //     content: '';
+                    //     width: 50%;
+                    //     height: 100%;
+                    //     background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                    //     background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+                    //     -webkit-transform: skewX(-25deg);
+                    //     transform: skewX(-25deg);
+                    // }
 
-                    &:hover::before {
-                        -webkit-animation: shine .75s;
-                        animation: shine .75s;
-                    }                    
+                    // &:hover::before {
+                    //     -webkit-animation: shine .75s;
+                    //     animation: shine .75s;
+                    // }                    
                 }
                 
                 a.lightbox img {
-                    height: 200px;
-                    width: 300px;
+                    height: 20rem;
+                    width: 30rem;
                     border: 3px solid white;
                     box-shadow: 0px 0px 8px white;
                 }  
@@ -133,6 +169,10 @@
                     opacity: 1;
                     bottom: -8px;
                     position: relative;
+                }
+
+                @include respond(tab-port) {
+                    margin: 0;
                 }
             }
 
@@ -249,6 +289,10 @@
                 top: 0px;
                 transition: all .5s ease-in-out;
             }
+
+            @include respond(phone) {
+                text-align: center;
+            }
         }
     }
 
@@ -257,10 +301,13 @@
         // position: relative;
 
         &-box {
-            height: 91.7vh;
-
+            height: 92.7vh;
+            
+            // @include respond(tab-land) {
+            //     height: 91.3vh;
+            // }
             @include respond(tab-port) {
-                height: 93.1vh;
+                height: 93.6vh;
             }
             @include respond(phone) {
                 height: 94.7vh;
@@ -278,6 +325,12 @@
                 background-size: cover;
                 -webkit-clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
                 clip-path: polygon(0 0, 83% 0, 30% 100%, 0% 100%);
+
+                @include respond(phone) {
+                    height: 60%;
+                    -webkit-clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+                    clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+                }
             }
 
             .cv-contener {
@@ -344,6 +397,10 @@
                     margin: auto;
                     overflow: auto;
                     animation: fade .5s ease-out 1.3s both;
+
+                    @include respond(tab-port) {
+                        font-size: 2rem;
+                    }
                 }
         
                 &-close{
@@ -368,6 +425,12 @@
                         transform: rotate(270deg);
                         opacity:1;
                     }
+
+                    @include respond(tab-port) {
+                        width: 9rem;
+                        height: 9rem;
+                        font-size: 2rem;;
+                    }
                 }
             }
 
@@ -383,11 +446,12 @@
         text-align: center;
 
         .box {
+            height: 70%;
 
             .contact-text {
 
                 span {
-                    font-size: 40px;
+                    font-size: 5rem;
                     color: #fff;
                     font-weight: 600;
                     text-shadow: 0px 0px 4px $primary-color;
@@ -407,7 +471,11 @@
                     color: $primary-color;
                 }
             }   
-
+            @include respond(tab-port) {
+                display: flex;
+                flex-direction: column;
+                justify-content: center
+            }
         }
         
     }
